<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="20dp"-->
        <!--android:layout_gravity="center" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dip"
            android:text="@string/title"
            android:textColor="#000033"
            android:textSize="30sp" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="15dp" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#000033"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:hint="@string/username_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/psword"
                android:textColor="#000033"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/login_psword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/psword_hint"
                android:inputType="textPassword" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/calltaxi_style_button"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/calltaxi_style_button"
            android:text="@string/register"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>