<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="#FFFFFF"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="10dip"
   android:orientation="vertical">
   <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_gravity="center">
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>
      <TextView
         android:text="@string/register"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:textColor="#000000"
         android:textSize="30sp" />
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
      <LinearLayout
          android:layout_width="fill_parent"
       	  android:layout_height="wrap_content"
       	  android:orientation="horizontal">
       	  <TextView
       	      android:layout_width="80dip"
       	      android:layout_height="40dip"
       	      android:gravity="center"
       	      android:text="@string/username"
       	      android:textSize="20sp"
       	      android:textColor="#000000"/>
	      <EditText 
	          android:id="@+id/register_username"
	          android:layout_width="fill_parent"
	          android:layout_height="40dip"
	          android:hint="@string/username_hint"/>
	  </LinearLayout>
	  <TextView 
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>
	  <LinearLayout
          android:layout_width="fill_parent"
       	  android:layout_height="wrap_content"
       	  android:orientation="horizontal">
       	  <TextView
       	      android:layout_width="80dip"
       	      android:layout_height="40dip"
       	      android:gravity="center"
       	      android:text="@string/psword"
       	      android:textSize="20sp"
       	      android:textColor="#000000"/>
	      <EditText 
	          android:id="@+id/register_psword"
	          android:layout_width="fill_parent"
	          android:layout_height="40dip"
	          android:inputType="textPassword"
	          android:hint="@string/psword_hint"/>
	  </LinearLayout>
	  <TextView 
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>
	  <LinearLayout
          android:layout_width="fill_parent"
       	  android:layout_height="wrap_content"
       	  android:orientation="horizontal">
       	  <TextView
       	      android:layout_width="80dip"
       	      android:layout_height="40dip"
       	      android:gravity="center"
       	      android:text="@string/repsword"
       	      android:textSize="20sp"
       	      android:textColor="#000000"/>
	      <EditText 
	          android:id="@+id/register_repsword"
	          android:layout_width="fill_parent"
	          android:layout_height="40dip"
	          android:inputType="textPassword"
	          android:hint="@string/repsword_hint"/>
	  </LinearLayout>
	  <LinearLayout
          android:layout_width="fill_parent"
       	  android:layout_height="wrap_content"
       	  android:orientation="horizontal">
       	  <TextView
       	      android:layout_width="80dip"
       	      android:layout_height="40dip"
       	      android:gravity="center"
       	      android:text="您的车牌号"
       	      android:textSize="20sp"
       	      android:textColor="#000000"/>
	      <EditText 
	          android:id="@+id/license"
	          android:layout_width="fill_parent"
	          android:layout_height="40dip"
	          android:inputType="textPassword"
	          android:hint="请输入您的车牌"/>
	  </LinearLayout>
	  <LinearLayout
          android:layout_width="fill_parent"
       	  android:layout_height="wrap_content">
	      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="30dp"/>
	  </LinearLayout>
   </LinearLayout>
   <LinearLayout 
        android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
        android:orientation="horizontal">	   
   		<TextView
   		    android:layout_width="25dip"
   		    android:layout_height="40dp"/>
   		<Button
   		    android:id="@+id/register_back_button"
   		    android:layout_width="110dip"
   		    android:layout_height="40dip"
   		    android:textColor="#FFFFFF"
   		    android:background="@drawable/calltaxi_style_button"
   		    android:text="@string/back" />   		
   		<TextView
   		    android:layout_width="30dip"
   		    android:layout_height="40dp"/>
   		<Button
   		    android:id="@+id/finish_register_button"
   		    android:layout_width="110dip"
   		    android:layout_height="40dip"
   		    android:textColor="#FFFFFF"
   		    android:background="@drawable/calltaxi_style_button"
   		    android:text="@string/register" />	   
   </LinearLayout>
</LinearLayout>